- Added more configuration for CBC propellant recoil
 - Separated CBC propellant power and recoil
- Added configuration for minimum charge power for big cannon projectiles
- Added configuration for ignoring squibbing for big cannon projectiles
- Added Cannon Welder
- Added drop mortar and Drop Mortar Shell for Wrought Iron big cannon (Wrought Iron Drop Mortar End)
[Development] - Added registry events for cannon cast shapes
[Development] - Added support for projectiles with integrated propellant
Changes:
- Some new textures courtesy of Milkyfur and LopyLuna
 - Updated attributions
- Increased data sync rate for cannon drill to avoid laggy motion
- Create Big Cannons now uses an integrated mod jar for projectile syncing
- Projectiles now chunkload
 - Can be turned off in mod config
- Doubled power of Big Cartridge, Powder Charge
- Changed cannon plume profile
- Reduced particle count of Smoke Shell
- Changed big cannon munitions system to be more robust and allow for multiblock munitions
- Separated spread configuration for Powder Charge and Big Cartridge
- Changed casting time to a flat rate regardless of size based on fluid type or tag
 - Casting times are configurable via datapack
- Changed squib ratio values
- Changed cannon tooltips
- Cast Iron, Bronze, and Steel cannon blocks and autocannon blocks can now be picked up with Silk Touch
- Big cannon propellant properties are now datapacked instead of set through config
 [Remove?] - Some values, like maximum power level for Big Cartridges, still configured in config menu
- Changed Powder Charge tooltip to include added cannon stress
Fixes:
- Fixed Cannon Crafting Wand not boring autocannons
- Fixed Cannon Crafting Wand not properly connecting cannons
- Fixed cannons moving in irregular fashion on Cannon Carriage
- Fixed cannon cast getting stuck when encountering invalid recipes
- Fixed Big Cannon Layer crashing game when placed
- Fixed Cannon Carriage spawning ghost blocks